[package]
name = "indexing-and-querying-code"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
swiftide = { features = [
  "qdrant",
  "redis",
  "openai",
  "tree-sitter",
], version = "0.13.2" }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
qdrant-client = "1.12.0"
indoc = "2.0.5"
dotenv = "0.15.0"